# OOP_lab3

./: CMakeLists.txt  README.md
src/: f.h  fig.cpp
tests/: CMakeLists.txt  test_lab3.cpp
